added css styles to the plain webpage and also fixed typos in the html

--- a/recipes/meatball.html
+++ b/recipes/meatball.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>odin's meatballs</title>
+    <link rel="stylesheet" href="recipe.css">
+    <style>
+        ol li{
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 <body>
-    <main>
-        <h1>PIZZA RECIPE</h1>
+        <h1>MEATBALL RECIPE</h1>
         <img src="images/meatball (2).jpg" alt="pizza image">
         <h2>Description</h2>
-        <p>These tasty Italian meatballs (polpette) start off in the oven, and finish by simmering in a simple tomato sauce. We love them as a main dish, with a side of sautéed zucchini and a salad.</p>
+        <p>These tasty Italian meatballs (polpette) start off in the oven,<br> and finish by simmering in a simple tomato sauce.<br> We love them as a main dish, with a side of sautéed zucchini and a salad.</p>
         <h2>INGREDIENTS</h2>
         <ul>
             <li><i>1 pound ground sweet Italian pork sausage</i></li>
-            <li><i1>pound ground beef</i></li>
+            <li><i>pound ground beef</i></li>
             <li><i>2/3 cup minced shallot</i></li>
             <li><i>1/2 cup freshly grated Parmesan cheese, plus more for serving</i></li>
             <li><i>1/4 cup Italian seasoned breadcrumbs</i></li>
@@ -47,6 +52,5 @@
         <p>
             <strong>No salt is added in the meatballs because the sweet Italian sausage, seasoned breadcrumbs, and Parmesan cheese add quite a bit of salt. Taste finished dish and season with salt if necessary.</strong>
         </p>
-    </main>
 </body>
 </html>
