--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>odin's pasta fagioli</title>
+    <link rel="stylesheet" href="recipe.css">
+    <style>
+        ol{
+            line-height: 3;
+        }
+    </style>
 </head>
 <body>
     <h1>PASTA RECIPE</h1>
